--- a/Views/Games/Details.cshtml
+++ b/Views/Games/Details.cshtml
@@ -29,14 +29,14 @@
             @Html.DisplayFor(model => model.Rating)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Review)
+            @Html.DisplayNameFor(model => model.Reviews)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Review)
+            @Html.DisplayFor(model => model.Reviews)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.GameId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
