--- a/Views/Games/Delete.cshtml
+++ b/Views/Games/Delete.cshtml
@@ -1,45 +1,41 @@
 ﻿@model GameReview.Models.Game
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Game";
 }
 
-<h1>Delete</h1>
+<h1 class="text-center">Delete Game</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h4>Game</h4>
+<hr />
 <div>
-    <h4>Game</h4>
-    <hr />
+    <h4>Are you sure you want to delete this game?</h4>
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Title)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ReleaseDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ReleaseDate)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Rating)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Rating)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Reviews)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Reviews)
-        </dd>
     </dl>
-    
-    <form asp-action="Delete">
+</div>
+<div>
+    <form asp-action="Delete" method="post">
         <input type="hidden" asp-for="GameId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Cancel</a>
     </form>
 </div>
+
