--- a/Views/Games/Details.cshtml
+++ b/Views/Games/Details.cshtml
@@ -10,29 +10,29 @@
     <h4>Game</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Title)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ReleaseDate)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ReleaseDate)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ReleaseDate.ToString("yyyy-MM-dd")) <!-- Optional: formatted date -->
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Rating)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Rating)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Reviews)
+        <dt class="col-sm-2">
+            Reviews Count
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Reviews)
+        <dd class="col-sm-10">
+            @Model.Reviews.Count() <!-- Display count of reviews -->
         </dd>
     </dl>
 </div>
@@ -40,3 +40,4 @@
     <a asp-action="Edit" asp-route-id="@Model?.GameId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+
