--- a/Views/Games/Index.cshtml
+++ b/Views/Games/Index.cshtml
@@ -13,41 +13,45 @@
     <thead class="thead-light">
         <tr>
             <th class="text-light">
-                @Html.DisplayNameFor(model => model.Title)
+                @Html.DisplayNameFor(model => model.First().Title)
             </th>
             <th class="text-light">
-                @Html.DisplayNameFor(model => model.ReleaseDate)
+                @Html.DisplayNameFor(model => model.First().ReleaseDate)
             </th>
             <th class="text-light">
-                @Html.DisplayNameFor(model => model.Rating)
+                @Html.DisplayNameFor(model => model.First().Rating)
             </th>
             <th class="text-light">
-                @Html.DisplayNameFor(model => model.Reviews)
+                Reviews Count
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td class="text-light">
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td class="text-light">
-                @Html.DisplayFor(modelItem => item.ReleaseDate)
-            </td>
-            <td class="text-light">
-                @Html.DisplayFor(modelItem => item.Rating)
-            </td>
-            <td class="text-light">
-                @Html.DisplayFor(modelItem => item.Reviews)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.GameId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.GameId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.GameId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td class="text-light">
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td class="text-light">
+                    @Html.DisplayFor(modelItem => item.ReleaseDate.ToString("yyyy-MM-dd"))
+                </td>
+                <td class="text-light">
+                    @Html.DisplayFor(modelItem => item.Rating)
+                </td>
+                <td class="text-light">
+                    @item.Reviews.Count()
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.GameId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.GameId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.GameId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+
+
