--- a/Views/Review/Delete.cshtml
+++ b/Views/Review/Delete.cshtml
@@ -1,45 +1,47 @@
 ﻿@model GameReview.Models.Review
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Review";
 }
 
-<h1>Delete</h1>
+<h1 class="text-center">Delete Review</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h4>Review</h4>
+<hr />
 <div>
-    <h4>Review</h4>
-    <hr />
+    <h4>Are you sure you want to delete this review?</h4>
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Content)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Content)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Rating)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Rating)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Reviewer)
+        <dt class="col-sm-2">
+            Reviewer
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Reviewer)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Reviewer.Name) <!-- Display Reviewer's Name -->
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Game)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Game.Title)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Game.Title) <!-- Display Game Title -->
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
+</div>
+<div>
+    <form asp-action="Delete" method="post">
         <input type="hidden" asp-for="ReviewId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Cancel</a>
     </form>
 </div>
+
