--- a/Views/Games/Index.cshtml
+++ b/Views/Games/Index.cshtml
@@ -4,54 +4,38 @@
     ViewData["Title"] = "Index";
 }
 
-<h1 class="text-center">Games List</h1>
+<h1 class="text-center">Games</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Add New Game</a>
 </p>
-<table class="table table-striped table-bordered mt-4">
+<table class="table table-dark table-striped table-bordered mt-4">
     <thead class="thead-light">
         <tr>
             <th class="text-light">
-                @Html.DisplayNameFor(model => model.First().Title)
+                @Html.DisplayNameFor(model => model.Title)
             </th>
             <th class="text-light">
-                @Html.DisplayNameFor(model => model.First().ReleaseDate)
-            </th>
-            <th class="text-light">
-                @Html.DisplayNameFor(model => model.First().Rating)
-            </th>
-            <th class="text-light">
-                Reviews Count
+                @Html.DisplayNameFor(model => model.ReleaseDate)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td class="text-light">
-                    @Html.DisplayFor(modelItem => item.Title)
-                </td>
-                <td class="text-light">
-                    @Html.DisplayFor(modelItem => item.ReleaseDate.ToString("yyyy-MM-dd"))
-                </td>
-                <td class="text-light">
-                    @Html.DisplayFor(modelItem => item.Rating)
-                </td>
-                <td class="text-light">
-                    @item.Reviews.Count()
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.GameId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.GameId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.GameId">Delete</a>
-                </td>
-            </tr>
-        }
+@foreach (var item in Model) {
+        <tr>
+            <td class="text-light">
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td class="text-light">
+                @Html.DisplayFor(modelItem => item.ReleaseDate)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.GameId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.GameId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.GameId">Delete</a>
+            </td>
+        </tr>
+}
     </tbody>
 </table>
-
-
-
