--- a/Views/Reviews/Create.cshtml
+++ b/Views/Reviews/Create.cshtml
@@ -1,19 +1,17 @@
 ﻿@model GameReview.Models.Review
 
 @{
-    ViewData["Title"] = "Edit Review";
+    ViewData["Title"] = "Create";
 }
 
-<h1 class="text-center">Edit Review</h1>
+<h1>Create</h1>
 
 <h4>Review</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ReviewId" />
-            <input type="hidden" asp-for="ReviewerId" value="@ViewBag.ReviewerId" /> <!-- Assuming you set the ReviewerId in the controller -->
             <div class="form-group">
                 <label asp-for="Content" class="control-label"></label>
                 <input asp-for="Content" class="form-control" />
@@ -26,11 +24,14 @@
             </div>
             <div class="form-group">
                 <label asp-for="GameId" class="control-label"></label>
-                <select asp-for="GameId" class="form-control" asp-items="ViewBag.GameId"></select>
-                <span asp-validation-for="GameId" class="text-danger"></span>
+                <select asp-for="GameId" class ="form-control" asp-items="ViewBag.GameId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <label asp-for="ReviewerId" class="control-label"></label>
+                <select asp-for="ReviewerId" class ="form-control" asp-items="ViewBag.ReviewerId"></select>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
@@ -41,8 +42,5 @@
 </div>
 
 @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
-
