--- a/Views/Reviews/Edit.cshtml
+++ b/Views/Reviews/Edit.cshtml
@@ -1,17 +1,18 @@
 ﻿@model GameReview.Models.Review
 
 @{
-    ViewData["Title"] = "Create Review";
+    ViewData["Title"] = "Edit";
 }
 
-<h1 class="text-center">Create Review</h1>
+<h1>Edit</h1>
 
 <h4>Review</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="ReviewId" />
             <div class="form-group">
                 <label asp-for="Content" class="control-label"></label>
                 <input asp-for="Content" class="form-control" />
@@ -27,9 +28,13 @@
                 <select asp-for="GameId" class="form-control" asp-items="ViewBag.GameId"></select>
                 <span asp-validation-for="GameId" class="text-danger"></span>
             </div>
-            <input type="hidden" asp-for="ReviewerId" value="@ViewBag.ReviewerId" /> <!-- Assuming you set the ReviewerId in the controller -->
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <label asp-for="ReviewerId" class="control-label"></label>
+                <select asp-for="ReviewerId" class="form-control" asp-items="ViewBag.ReviewerId"></select>
+                <span asp-validation-for="ReviewerId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
@@ -40,8 +45,5 @@
 </div>
 
 @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
-
