--- a/Views/Games/Index.cshtml
+++ b/Views/Games/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a asp-action="Create">Add New Game</a>
 </p>
-<table class="table table-dark table-striped table-bordered mt-4">
+<table class="table table-striped table-bordered mt-4">
     <thead class="thead-light">
         <tr>
             <th class="text-light">
