--- a/Views/Reviewers/Index.cshtml
+++ b/Views/Reviewers/Index.cshtml
@@ -4,18 +4,18 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1 class="text-center">Reviewers</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Add New Reviewer</a>
 </p>
-<table class="table">
-    <thead>
+<table class="table table-striped table-bordered mt-4">
+    <thead class="thead-light">
         <tr>
-            <th>
+            <th class="text-light">
                 @Html.DisplayNameFor(model => model.Name)
             </th>
-            <th>
+            <th class="text-light">
                 @Html.DisplayNameFor(model => model.Email)
             </th>
             <th></th>
@@ -24,10 +24,10 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
+            <td class="text-light">
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
-            <td>
+            <td class="text-light">
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
