--- a/Views/Games/Index.cshtml
+++ b/Views/Games/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<GameReview.Models.Game>
+﻿@using GameReview.Helpers
+@model PaginatedList<GameReview.Models.Game>
 
 @{
     ViewData["Title"] = "Index";
@@ -9,14 +10,20 @@
 <p>
     <a asp-action="Create">Add New Game</a>
 </p>
+
+<form method="get" class="form-inline mb-3">
+    <input type="text" name="searchString" value="@ViewData["CurrentFilter"]" class="form-control mr-2" placeholder="Search by title" />
+    <button type="submit" class="btn btn-primary">Search</button>
+</form>
+
 <table class="table table-striped table-bordered mt-4">
     <thead class="thead-light">
         <tr>
             <th class="text-light">
-                @Html.DisplayNameFor(model => model.Title)
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["TitleSortParm"]">Title</a>
             </th>
             <th class="text-light">
-                @Html.DisplayNameFor(model => model.ReleaseDate)
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["DateSortParm"]">Release Date</a>
             </th>
             <th></th>
         </tr>
@@ -39,3 +46,15 @@
 }
     </tbody>
 </table>
+
+<div class="text-center">
+    @if (Model.HasPreviousPage)
+    {
+        <a asp-action="Index" asp-route-pageNumber="@(Model.PageIndex - 1)" asp-route-sortOrder="@ViewData["CurrentSort"]" asp-route-searchString="@ViewData["CurrentFilter"]">Previous</a>
+    }
+    Page @Model.PageIndex of @Model.TotalPages
+    @if (Model.HasNextPage)
+    {
+        <a asp-action="Index" asp-route-pageNumber="@(Model.PageIndex + 1)" asp-route-sortOrder="@ViewData["CurrentSort"]" asp-route-searchString="@ViewData["CurrentFilter"]">Next</a>
+    }
+</div>
